--- a/dwaveCosEg.html
+++ b/dwaveCosEg.html
@@ -29,7 +29,7 @@ Alpha:
 
 <button onclick="setTChart(gamma_,'Gamma','mJ/mol/K&#xb2');setTChart2(NSgamma_,'Normal State','mJ/mol/K&#xb2')">Gamma</button>
 <button onclick="setTChart(entropy_,'Entropy','mJ/mol/K');setTChart2(NSentropy_,'Normal State','mJ/mol/K')">Entropy</button> 
-<button onclick="setTChart(susceptiblity_,'Susceptiblity','m&#xb3/mol');setTChart2(NSsusceptibility_,'Normal State','m&#xb3/mol')">Susceptiblity</button>
+<button onclick="setTChart(susceptibility_,'Susceptibility','m&#xb3/mol');setTChart2(NSsusceptibility_,'Normal State','m&#xb3/mol')">Susceptibility</button>
 <button onclick="setTChart(DF_,'DeltaF','mJ/mol');setTChart2([],'','mJ/mol/K&#xb2')"">DeltaF</button>
 <button onclick="setTChart(gap_,'Gap','meV');setTChart2([],'','mJ/mol/K&#xb2')">Gap</button>
 <button onclick="setTChart(Dt_,'D(t)','');setTChart2([],'','mJ/mol/K&#xb2')">D(t)</button>
@@ -104,7 +104,7 @@ Eg: <input type="text" id="EgField">
 	let gap_ = [];
     let entropy_ = [];
     let NSentropy_ = [];
-	let susceptiblity_ = [];
+	let susceptibility_ = [];
     let NSsusceptibility_ = [];
     let temperature_ = [];
     let gamma_ = [];
@@ -140,8 +140,8 @@ Eg: <input type="text" id="EgField">
         gap_ = new Array(NT_).fill(0);
         entropy_ = new Array(NT_).fill(0);
         NSentropy_ = new Array(NT_).fill(0);
-		susceptiblity_ = new Array(NT_).fill(0);
-        NSsusceptiblity_ = new Array(NT_).fill(0);
+		susceptibility_ = new Array(NT_).fill(0);
+        NSsusceptibility_ = new Array(NT_).fill(0);
         //gamma_ = new Array(NT_).fill(0);
         //NSgamma_ = new Array(NT_).fill(0);
         DF_ = new Array(NT_).fill(0);
@@ -212,7 +212,7 @@ Eg: <input type="text" id="EgField">
         }
 
 		else if (message.messageType == "Susceptibility") {
-            susceptiblity_ = message.X;
+            susceptibility_ = message.X;
             NSsusceptibility_ = message.Xn;
             setTChart(susceptibility_,'Gamma','m\u00B3/mol');
             setTChart2(NSsusceptibility_,'Normal State','m\u00B3/mol')
@@ -269,7 +269,7 @@ Eg: <input type="text" id="EgField">
         var csv = 'T,t,t2,Delta,Gamma,GammaN,S,Sn,DS,DF,Dt,Chi,ChiN,lambda\n';
         
 		for(let i = 0; i<NT_; i++){
-			csv+=temperature_[i]+','+(temperature_[i]/Tc_)+','+Math.pow(temperature_[i]/Tc_,2)+','+gap_[i]+','+gamma_[i]+','+NSgamma_[i]+','+entropy_[i]+','+NSentropy_[i]+','+(entropy_[i]-NSentropy_[i])+','+DF_[i]+','+Dt_[i]+','+susceptiblity_[i]+','+NSsusceptibility_[i]+','+lambda_[i]+'\n';
+			csv+=temperature_[i]+','+(temperature_[i]/Tc_)+','+Math.pow(temperature_[i]/Tc_,2)+','+gap_[i]+','+gamma_[i]+','+NSgamma_[i]+','+entropy_[i]+','+NSentropy_[i]+','+(entropy_[i]-NSentropy_[i])+','+DF_[i]+','+Dt_[i]+','+susceptibility_[i]+','+NSsusceptibility_[i]+','+lambda_[i]+'\n';
 		}
 		
      
@@ -563,3 +563,4 @@ function setProgress(amount){
 </body>
 
 </html>
+
