--- a/dwaveCosEg.html
+++ b/dwaveCosEg.html
@@ -214,7 +214,7 @@ Eg: <input type="text" id="EgField">
 		else if (message.messageType == "Susceptibility") {
             susceptibility_ = message.X;
             NSsusceptibility_ = message.Xn;
-            setTChart(susceptibility_,'Gamma','m\u00B3/mol');
+            setTChart(susceptibility_,'Susceptibility','m\u00B3/mol');
             setTChart2(NSsusceptibility_,'Normal State','m\u00B3/mol')
         }
 
@@ -563,4 +563,5 @@ function setProgress(amount){
 </body>
 
 </html>
+
 
